fixed title spacing for sponsors section

--- a/css/main.css
+++ b/css/main.css
@@ -6328,23 +6328,23 @@ nav {
   @media (max-width: 575.98px) {
     #sponsors .title {
       font-size: 2em;
-      padding-bottom: .5em; } }
+      padding-bottom: 1.0em; } }
   @media (min-width: 576px) and (max-width: 767.98px) {
     #sponsors .title {
       font-size: 2.5em;
-      padding-bottom: .6em; } }
+      padding-bottom: 1.2em; } }
   @media (min-width: 768px) and (max-width: 991.98px) {
     #sponsors .title {
       font-size: 3em;
-      padding-bottom: .75em; } }
+      padding-bottom: 1.5em; } }
   @media (min-width: 992px) and (max-width: 1199.98px) {
     #sponsors .title {
       font-size: 4em;
-      padding-bottom: 1.5em; } }
+      padding-bottom: 3.0em; } }
   @media (min-width: 1200px) {
     #sponsors .title {
       font-size: 4em;
-      padding-bottom: 1.5em; } }
+      padding-bottom: 3.0em; } }
   #sponsors img, #sponsors object {
     width: 100%; }
   @media (max-width: 575.98px) {
@@ -6392,8 +6392,26 @@ nav {
   @media (min-width: 1200px) {
     #sponsors .sb-list > div {
       padding: 2em; } }
-  #sponsors button {
-    margin: 2em; }
+  @media (max-width: 575.98px) {
+    #sponsors button {
+      margin-top: 1.0em;
+      margin-bottom: 1.0em; } }
+  @media (min-width: 576px) and (max-width: 767.98px) {
+    #sponsors button {
+      margin-top: 1.2em;
+      margin-bottom: 1.2em; } }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    #sponsors button {
+      margin-top: 1.5em;
+      margin-bottom: 1.5em; } }
+  @media (min-width: 992px) and (max-width: 1199.98px) {
+    #sponsors button {
+      margin-top: 3.0em;
+      margin-bottom: 3.0em; } }
+  @media (min-width: 1200px) {
+    #sponsors button {
+      margin-top: 3.0em;
+      margin-bottom: 3.0em; } }
 
 #contact {
   background-image: url("../resources/images/gridBig.png");
