--- a/scss/_sponsors.scss
+++ b/scss/_sponsors.scss
@@ -18,25 +18,26 @@
 
     .title {
 	@extend .col-12;
+
 	@include media-breakpoint-only(xs) {
 	    font-size: 2em;
-	    padding-bottom: .5em;
+	    padding-bottom: 1.0em;
 	}
 	@include media-breakpoint-only(sm) {
 	    font-size: 2.5em;
-	    padding-bottom: .6em;
+	    padding-bottom: 1.2em;
 	}
 	@include media-breakpoint-only(md) {
 	    font-size: 3em;
-	    padding-bottom: .75em;
+	    padding-bottom: 1.5em;
 	}
 	@include media-breakpoint-only(lg) {
 	    font-size: 4em;
-	    padding-bottom: 1.5em;
+	    padding-bottom: 3.0em;
 	}
 	@include media-breakpoint-only(xl) {
 	    font-size: 4em;
-	    padding-bottom: 1.5em;
+	    padding-bottom: 3.0em;
 	}
     }
 
@@ -92,6 +93,25 @@
     }
 
     button {
-	margin: 2em;
+	@include media-breakpoint-only(xs) {
+	    margin-top: 1.0em;
+	    margin-bottom: 1.0em;
+	}
+	@include media-breakpoint-only(sm) {
+	    margin-top: 1.2em;
+	    margin-bottom: 1.2em;
+	}
+	@include media-breakpoint-only(md) {
+	    margin-top: 1.5em;
+	    margin-bottom: 1.5em;
+	}
+	@include media-breakpoint-only(lg) {
+	    margin-top: 3.0em;
+	    margin-bottom: 3.0em;
+	}
+	@include media-breakpoint-only(xl) {
+	    margin-top: 3.0em;
+	    margin-bottom: 3.0em;
+	}
     }
 }
